--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"weeks starting in the month of\" + travel_month)"
+    "travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"weeks starting in the month of\" + travel_month"
    ]
   },
   {
