--- a/index.ipynb
+++ b/index.ipynb
@@ -144,20 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-ab63ead8e691>, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'number_of_weeks' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-ab63ead8e691>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"weeks starting in the month of\" + travel_month)\u001b[0m\n\u001b[0m                                                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3c02bb7e0869>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtravelling_schedule\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I will be travelling\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_of_weeks\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"weeks starting in the month of\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtravel_month\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtravelling_schedule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'number_of_weeks' is not defined"
      ]
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"weeks starting in the month of\" + travel_month"
+    "travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"weeks starting in the month of\" + travel_month\n",
+    "travelling_schedule"
    ]
   },
   {
